samples/_failures_safe/1761222047_122753_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04f60c9d.c: In function ‘main’:
./samples/SAFE/__tmp_04f60c9d.c:148:9: error: expected expression at end of input
  148 |         printf("ERROR: %.2f%%\n",
      |         ^~~~~~
./samples/SAFE/__tmp_04f60c9d.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04f60c9d.c:148:9: error: expected declaration or statement at end of input
